Use
  <WrapperClass>.valueOf(primitiveTypeVariable);

instead of

  new <WrapperClass>(primitiveTypeVariable);

for all <WrapperClass> in (String, Boolean, Integer, ...).

FindBugs says that's much more efficient because of caching (factor ~3.5).